enable intel-gpu-plugin chart

--- a/clusters/main/kubernetes/flux-system/flux/clustersettings.secret.yaml
+++ b/clusters/main/kubernetes/flux-system/flux/clustersettings.secret.yaml
@@ -4,49 +4,49 @@ metadata:
     name: cluster-config
     namespace: flux-system
 data:
-    #ENC[AES256_GCM,data:dwLBvuGMwn51LvJmtL1I9GLVhNANZDOvMk4Cb1c2vXAFY3vvxau7eHrnIc4WvIGQK9lHoCSpW8rSVQS07Fw/sXM=,iv:M5/KOjPRCTHvKjSD3H7Q9KE0lUs+xDjf2GFYzl9unls=,tag:vtCGzdneok0shJxJFVWdBg==,type:comment]
-    #ENC[AES256_GCM,data:rTz44UdjnYN8un6tQZNK/rsw8pX4oY1wfWjLVzivGqW1IPBmgZzpV3jE00c=,iv:ave3Yv5zOjaXdfYi63gKGm/PNxRpwgU3bRIMEkhl6aA=,tag:4e3Z06s61RXZM4YYBMvuGQ==,type:comment]
-    VIP: ENC[AES256_GCM,data:vUxbRPtzIj4Jmo36jw==,iv:MiCg7unogauai0HksCBJtM39cE7Luw0oBtivUfgd9I4=,tag:psfsTMqzzUYXCu8zqvboOQ==,type:str]
-    #ENC[AES256_GCM,data:FADQL7D/JE6epozvF0k7yFeepPtrar9uazi7,iv:T9ZUbblREQvyie9njnZoLKAG9RZrORjvZDyPvRc89Og=,tag:NfvgwCAKtl6MRkzcyKq0WQ==,type:comment]
-    #ENC[AES256_GCM,data:0o4EWd2Sc4MYw92bgl1vREmf7OOUuubTsKkwGpS2OEFDcZc816BevCv65MkUYQgZ+xdhJytFH0VkdITSmYzCRu03Vtzc5voMdi3iRU+wbqGdbcf33JBDVyE=,iv:hTl1uf040/YegHTYXRp2BLGB3wqYMsqaaU+eq0Q3h3o=,tag:UAnlt0s0bhJPfCVxBfm6XQ==,type:comment]
-    MASTER1IP: ENC[AES256_GCM,data:1n4MORr62ThbUUp/8k8=,iv:xCW6/xyoYdlgcK2dDYsOMt531b079M8LNMh+vu8VSvM=,tag:a+B9ZXZlxU/10IC0YEXjcg==,type:str]
-    #ENC[AES256_GCM,data:yX24y1DVOlVyJ80P3GIo2RiSZ6NTmZqYScs3bKj31fm9zg==,iv:cGzAmjoO/hRRkjqlHIYZzrSv3999A6PF6uLFXCk4uiU=,tag:T64k00sKXrWZPfRSP4pNyw==,type:comment]
-    GATEWAY: ENC[AES256_GCM,data:vy/Rx3GYtY/d56tWFg==,iv:1w5L3+BTJVlaGQnv3U9BYG2EQDrzoAegPeVwM6OwBtQ=,tag:O7szEH1DKEnOSNNaW5K9mg==,type:str]
-    #ENC[AES256_GCM,data:+8MG3eKvPA/JzIrVzWrwZiQveK+9SFjQj9J75jNSwpAA3OrYEJ5k1u631vps5hA=,iv:WMdmTLNU9NAHttV5xfClZZ2CaRMPysBoz1HqoxW98C0=,tag:ZA+ms7KOegzwEg18vJuJQA==,type:comment]
-    METALLB_RANGE: ENC[AES256_GCM,data:U3zAhXlc0MM+oRQ1UNbvNAj+WGdZ87WldlWo9VwV7Q==,iv:6RzMRBvQDa838R/irjh01htxYlyjFa0sIxKmpFfVKlY=,tag:J0rZnMQsqxdOynrWIuNYeQ==,type:str]
-    #ENC[AES256_GCM,data:pP4UHJVK00OOgYOCJuvN6WFidS5EMAdrEmxhxAcU76evBVfue3fGYfp59uPE5wQyVAlN510Hm5bhuci5Pckvdhi9lShSeXRmz7gBvwjfsAdLjA==,iv:uauxJmHZVFy8gImghtR7p26UuaB6jOFzXj/ur81Em/s=,tag:7QgTJ7FhvdqLxgi3M1T28w==,type:comment]
-    TRAEFIK_IP: ENC[AES256_GCM,data:r8Gl3Jj0Dx1pc6AScoBp,iv:M1yW0X+NIq2B7wdnsAbtGHCmNu8W8cFpV67YNuiVats=,tag:0/CCnhJ8OFF6iM8xpxW/hQ==,type:str]
-    #ENC[AES256_GCM,data:MyIDQg6o8Dd1BxYwwv3SL/N6zSmwVPDO3ywSF3e6FVNP,iv:LCgqt5jrHrzW7eLyO4+DXMTT9p1KLU5riEmhXRuFmdA=,tag:I5IUGTIVjcoVjQI3sMUj1w==,type:comment]
-    BLOCKY_IP: ENC[AES256_GCM,data:10JvvWpaf/HL1WtZ6y4Z,iv:ed7s8CMv50xbvpZNCpzUX9ayxxYjc6D5YvxPbgR+BeU=,tag:jzXXLRwSD1YCEqzBgkPu+Q==,type:str]
-    #ENC[AES256_GCM,data:MHPlSrjmrsyJgKvmF8Kyap0oSJEI1o+amp+03LPktGlLqhb9N46+x2waObEFsX5SXnOT287VXerD71XBlwk0TqFcViXRdLSN0O0xeGbATNM=,iv:NUzdnlbK6y9noCV+pUrEJknctvFvUZT/1OBuSEx3Wbs=,tag:SjiYi3ayu+EOfe3yXb7BXA==,type:comment]
-    DASHBOARD_IP: ENC[AES256_GCM,data:7B8IikLXmgOhy8hPbsP1,iv:Bubz6kF1eTaH9t/SXiTlRYz+qGBPsESVNdkjhg5sbkM=,tag:f5cTxHNlIvEfMtRxsKt3qA==,type:str]
-    #ENC[AES256_GCM,data:5n11AEUZtxa6r1OEdYsEpDdwx7RBTysmnCkqQHafhT3Y/06qFZyMVcFyWxvdEGUhdPU8mjVzJ0x+kv2nuOOxX5dlzSW8h9j6+koKiInhQJG1lMNrbqZf,iv:CM6uhyTroEeFfrAuSPShIGioiE68rpfM9aQx6FDGDLw=,tag:evqo7otwykWmG2lwjqhP7Q==,type:comment]
-    #ENC[AES256_GCM,data:LyoFL66Bi6QVuEs5pQjLcZf1rgMwImED2tS/BK3j3D8fI/RAhwnuxY536OgvoOutwKDPjYTL71x7MjphJXMkA8WvTQwGToAP1dDUnh6ttnCuqvd3ocgs4YUfvVUX/yjhQNqMG2ZL6eg/oxD1b1VND1Qzom5lpyZN3lbGtQ==,iv:b7xkSIHBth7rOAK3tcBWAt/x/elDea34Z61GIzU4Ecw=,tag:t7q9lK59L3UfILlEvDlyGw==,type:comment]
-    #ENC[AES256_GCM,data:QJTw02yXk4SsP2zFYSRBbqYQE79Itwxi0x/Pq5ptQf6EcOya8jTypJfMzMbjMX68W8Gn98gNlGl0wGErPAQ/VwJMnekt9DS3Wp0pNeT7pNw=,iv:Mrl/fSDOTL69bcKR5jR6WPOobEOg43/18/Oe4iSVMcg=,tag:lz8jvGvLQ5nkEBXD+WwpVA==,type:comment]
-    #ENC[AES256_GCM,data:EEg2pO3hXIMcITDit0eVCCRkMrjdS0bDUA09xOyJs5tCxCCjVR2uGuMiauOuAcoPZ23uo6+x,iv:PB4lzERZgii8Z/TaH/7m/0FvVquKPYCTFio+6B7DhhU=,tag:fvtg7/J53PCU6Kp4t/qVQA==,type:comment]
-    DOMAIN_0: ENC[AES256_GCM,data:nkB/0E/HNqBxp87S,iv:sQ/7CZcIW/dk6fT9sQYttFmXReC+01v5xtLfdW2QDSs=,tag:SMHulqBCexWe/RXmMrdupw==,type:str]
-    DOMAIN_0_EMAIL: ENC[AES256_GCM,data:sRBUXwViCK0orscsJ0hKlFY=,iv:MfAfZs9AGUa1XE79zYoqvlbkOYFJFXPeX2qVwfiJaYc=,tag:BM6Y0dB5Ws+Y4CX+jfK1cA==,type:str]
-    DOMAIN_0_ZONE: ENC[AES256_GCM,data:R94ibG9z79cn7kTJRIeawJAroTdAZnZe8q5MDRmtPEE=,iv:ZK8p1GBKfRDB78GHRYNV/2yVcTnW+5wyVGm7W7XOJB4=,tag:+BDzktbrEGFXWHx3t6zZuw==,type:str]
-    DOMAIN_0_CLOUDFLARE_TOKEN: ENC[AES256_GCM,data:S2ZYpqUumne1SHvT+71BEV4FS19NllvOgRad9nxgbP4ztxOKT1o3Og==,iv:SRyWCRN0dUXAosUbnCspuRoOWJpcEnOxgyfXuT+uEpA=,tag:JSs1slgG+9P7NEpwdW27mQ==,type:str]
-    #ENC[AES256_GCM,data:rs9LcvVJB3hrb3Ua7wCRXxz2acJSpTvuBYI17k7UC8qRIAbbtZOA5TZRBajvqd19si5F5vTpHdTFLBDZ9bbsHQ==,iv:n4OyTP9p1X85vdrTjHohRJuTqz41kVv8Fy2U/JnuOys=,tag:daBCfuP0kt+oysSnN8pY3g==,type:comment]
-    #ENC[AES256_GCM,data:HdriRWvP/ZohJIic3VDDluiNeW1/Z//nma6POsLdBsJeqxNRpchFXvZ3mLmogTZ7R6+I/lGtsj4=,iv:PxNsjioh6/fC+iN2DKUESZ5jhey110GnrZKyVi0RDLY=,tag:CpQeCQs+/82uUEBE/v2vbg==,type:comment]
-    #ENC[AES256_GCM,data:XiSZmEuKTLsjj6BfM8w0sV/KffgxEYFyAg==,iv:9kkTvDBYCZw99h9x9+emL4t9DCIvuiObLl5a7VKuDYw=,tag:cTlb6MSmLxUrDtDZGmho3w==,type:comment]
-    #ENC[AES256_GCM,data:cZ88dEkW/SDRQ8RPvQMf0zWKcV2OrTPDpPOV+DvhD8GtEDQ2WbvY5TGs0TuveK0AQAjER1k6lkuis7Kd1eq1S8Z+J8FtmmOBRbXb7Yg=,iv:kb2lQuMGr+kq/rlkIdbUSaKnjoLrBlNFISBMcd4hMQY=,tag:eUtaSY9FLY+XoA0NqU7uBA==,type:comment]
-    GITHUB_REPOSITORY: ENC[AES256_GCM,data:EGNW2/u0IrvpgnUzaDwB9Rp7iA20fUFQb/9g0CT3JF6hOQNRIJXPgStR39tn+wNG,iv:GGZ2qzt1azfjKedYSXWJIaUMe9l+5nA5nKXDmjih14U=,tag:rKjho3CSl77p1WBd/yQqkQ==,type:str]
-    #ENC[AES256_GCM,data:2dNzUieCFmEcgXblbtL3NEMqurra+43g4IeHHiQZdfpm4LN+F8SIrlZrulbC1iSj0ietGM4SMR/vOk8ChypVOqw+AJ/2/JM=,iv:PTaEaziT9o7VCDTnWlTVFX0R/NHVHtBsM2vDrGohBQg=,tag:F7MEA1Ch1zZt81NDMx/atg==,type:comment]
-    #ENC[AES256_GCM,data:Jj8QEPZm/sybl9WzFy2wuJokUjeq8l/LeRnQ9zZu3T3tWJuts6/grCOOLMgyahaSvHbhyI2D,iv:ugQtJqhx7Lv5jIIHrrpuZvhp3/OZF8KqtqtOYPNwUKw=,tag:BR+rhJZeOWjQLV1WATUNOg==,type:comment]
-    DOCKERHUB_USER: ENC[AES256_GCM,data:Ouk51wiczw==,iv:uSi8fmTSB8lUR7UFlQCQh6VBS5SByGskW0GmvPLaNVk=,tag:lFP+kBm/7VQkh2kJbJTy8w==,type:str]
-    DOCKERHUB_PASSWORD: ENC[AES256_GCM,data:F47pKieOyWsWGBffpRmtQ5dRccw=,iv:wO7MYMUMhDUtFgZ0n69FUo6BAXMSp3WsFrUlpdX6gQ8=,tag:eD/eYU7KszND2nluLuTi3w==,type:str]
-    NFS_SERVER: ENC[AES256_GCM,data:oRKPVxsNzxgeO6I=,iv:0/rJbHC75g8r//5FLlCRxkLdN0laSNAgInsZWzoc1+8=,tag:NKm8vD178iPEst3ncarKQw==,type:str]
-    PLEX_IP: ENC[AES256_GCM,data:IywUMFs0RMNEIf8ILA4e,iv:10e505hCCDvMAOrIOatyYyRb4hp0coMjH7o8TgjMh2w=,tag:bvvahhQp/GvIE+S6tsuFXQ==,type:str]
-    BACKBLAZE_ACCESS_KEY: ENC[AES256_GCM,data:ECQZiVdQJ8QpnOHTOCYYueiuIbU3/HAhmA==,iv:rou9euKdMr5KGmtA3ozfVj/XDt15THYV/mHhaYpw5eo=,tag:kLtNLMpP1SOULvUZ0E5vKQ==,type:str]
-    BACKBLAZE_SECRET_KEY: ENC[AES256_GCM,data:5MDZWXEiupwC6ZFZ73E2meN/41JzX3sbFn8lKittqg==,iv:uTou2NgKagq56MzEcJeGcCXHfyvrkhvEgObP7DJb7MI=,tag:xMF5R2TLPJVs+iBYRmvZQQ==,type:str]
-    #ENC[AES256_GCM,data:fmSTVUqImGbefEeQi6QwAGdUBmv8KNG/qlHRqadO/vT3ELKuExM=,iv:DLc/+fzRsbLxqpRC8SLVtPAN2KLv0nOP57xMJtmEZhk=,tag:j5Gkevb8OxyZph5RkKLwOQ==,type:comment]
-    BACKBLAZE_ENCR_KEY: ENC[AES256_GCM,data:4WAcHSRO+SSyLHi9wxfttZzhe84=,iv:qtS+/y15eHFLAhl+VrRyW+YJUMTSFeLlOhaw0sHLvRQ=,tag:YmjogMY0V+dYsBqXVJ60Rg==,type:str]
-    #ENC[AES256_GCM,data:eWTr9uGKxluCuxNTY9U=,iv:rPLNBqVXiNrP0i21dNWHIncuKjFdkGLbCCObluYTOgw=,tag:JaMI5zRXpj5nwlKVqOZHDA==,type:comment]
-    PODNET: ENC[AES256_GCM,data:zDf1p28WrUiVNcZ2sg==,iv:FHVedVG7OY5lWIPrBaKIjFZM1zS1OI6dxO7rTAI8jes=,tag:exQY/LHQRrnOGLcLtbEnGg==,type:str]
-    SVCNET: ENC[AES256_GCM,data:Zv8Q+UuKjSmvTDnKog==,iv:itn2JY71Lguk+ZsldHfPmHTn24BBGNFxM5usI2Wr0C4=,tag:5UwI23NGxwyVvo43MJmITQ==,type:str]
-    CLUSTERNAME: ENC[AES256_GCM,data:Np2dZQ==,iv:vnYj1vNY+wcNvbiiXO3jB8c1twCGQc1nXNLq3wlyRx8=,tag:OWIUZ8SObCtnVSTbCbf6ww==,type:str]
+    #ENC[AES256_GCM,data:785rq8Gfx/nNOYL/qrzws5KFtumApBwCLkrVIeRUf0TQKhyfn0U/XvOeTZkB7EuXKG+kFQ6a7ieZw25KkLpF9cs=,iv:JJpAHYA/55m16+XYIzYibJWWDFiyzvH7SvW6BLgaYmc=,tag:aFx9UQzkeuSjNZwU6FI+lw==,type:comment]
+    #ENC[AES256_GCM,data:hTtj5tb4b+SEqUHMePPqa+PltlgQWek07Gy8DHAszEb+UNHZsYY9ZXGdSrU=,iv:9HkN7GzOa7vJWvmrKDs0kkIQprpnQTvUgDdxMcYe7Tk=,tag:52gBkpqz/XmkHxWml8MYaA==,type:comment]
+    VIP: ENC[AES256_GCM,data:Ng03XsFPY24g09Z65Q==,iv:TCiDvk/YfkLztqB3lgC9ca5Wwoi+QHzB5y0ha3f7Lr4=,tag:TEiRqDB4PzvjWLr+tvG4Aw==,type:str]
+    #ENC[AES256_GCM,data:WgNjrLl3Ga8/W8QIMqWINAZQcVD5xVNl+FYE,iv:6aDxNEPw/KZ50jVhEoD8orUvYevUOeTX0PYXP9gSBKc=,tag:RE+dsnpAG8z7XtB7frGNBA==,type:comment]
+    #ENC[AES256_GCM,data:iykLPt7BsCZrpD0gfs87PDvIZpDkgjXsMeFIbdzjocKDEg8EEZCWodkNbFXjwYyX2gyOmPISu2+vQXqdcd5JRfjuiojXZcCkXTuc769G0xUyzisLDUexwRw=,iv:Y5B6CWuqxp0UvkWfpX/w0BhIWvQ2zAqz200QCmT8JG4=,tag:Geq1er48qSegcDcP83hKHg==,type:comment]
+    MASTER1IP: ENC[AES256_GCM,data:/ZyZC7IsxvrD2k+mwGI=,iv:2LGh8rdOBQp/3TJ479GzvFWieP2mKP8A7+ssEfy5phI=,tag:8Zsg+3LiCYzx1LbxkaRrww==,type:str]
+    #ENC[AES256_GCM,data:9CmuennAPrih4jf1vvaXg8N98JpoQvYHiOUIy4KdAZUVbg==,iv:5OVa1LfLkDxiIBBXnfZMrVVrzsTHSfVxThFG9lFJr1Q=,tag:qa3RLy84DdtGOJvQxhHVnQ==,type:comment]
+    GATEWAY: ENC[AES256_GCM,data:WeI/Sp7mvCVpyKQ7ag==,iv:ZaVnCje6UIfpBRkn68I7OXXpbZaxxSy83KspUw3NfaM=,tag:b5YR4DYJwmwzrwsGko/j+Q==,type:str]
+    #ENC[AES256_GCM,data:Twikr0S09EtBPIpg7ivaTHqROCHSC0v9bka+5qKWpvZk14hKt7b/LiefkGXA8J0=,iv:72TP1eF4S9879WLHGcnnGdv3iPLaaMBjkTNDvPgjVLM=,tag:Q5ZOejr/SZqZDO8HDvR8Gw==,type:comment]
+    METALLB_RANGE: ENC[AES256_GCM,data:8zF3IY2RM+eHSJD0XulvPo187NRSFaXesZvyFENh1w==,iv:wmBd+ZASnsy81Dq+ngz69alycga9lTBr1eHGfS3wp/M=,tag:GvOPkKLbEAxvEzyVtBtaQQ==,type:str]
+    #ENC[AES256_GCM,data:gNY0OUjblk+LEjx4KMmaa77md/50ITA+T9b/N21gWxkDZa2Iq4kdcP8S+Sapk7OA9bfHWAvMKPOrmMgkx1liQgachgWxVHF2QKA/guQYoHVDSw==,iv:nBg4I6EdyvKU61rjvlm74FLmev2TLEY7Iwpcx99wspE=,tag:t7qJb3V1vW8vUpERBs4SRQ==,type:comment]
+    TRAEFIK_IP: ENC[AES256_GCM,data:3O7LU3hTHjwYz7fb3i4d,iv:qwvuhs3DMMlS+7NPKtLBNBMntOXVPhWUJLe/Se5en10=,tag:5/N0gUmzCKIPHXN7nFhp/g==,type:str]
+    #ENC[AES256_GCM,data:DiTS7N4eSgxUW4sunJhK19zHhQs0ZlWooNjrqajWaU6Z,iv:i6i1VIyzpJwU0zFEo/y1hk63D+CGOeOtsAUtHSGCkCE=,tag:qEjb6Z3IR4qiI6TbjqPiYg==,type:comment]
+    BLOCKY_IP: ENC[AES256_GCM,data:pAyVAqg2BmTve1LXCes8,iv:VucEWaJqdMBmOr89AOVdfHj+8M7wPsJ94jvsJQ5dAQg=,tag:dSybecSrVVdNR/FwwpDNeg==,type:str]
+    #ENC[AES256_GCM,data:qrtFlvB/wBrprcEg//tQK2RX4prhrpGyt81sEdL/jrymN7IpNKfrvNiI83+mUSeBbbHUyJc2b20UKlScQEitb4kzJEW2niNx8lzwW5gT3r0=,iv:YaI1vuVv8t7HffwzkouONHiVONxg1h3ZBTJsTqARLKQ=,tag:kYRMvGWpKqrB8KZvc6kZcw==,type:comment]
+    DASHBOARD_IP: ENC[AES256_GCM,data:eyTQm3rSxa1g1Gh0zkMz,iv:gqjnyRlYMnYz6MKKQRveGWysXR5AKEecm+Bm4rPv5S0=,tag:5hTHyXcw4JkUe2TqyuD7FA==,type:str]
+    #ENC[AES256_GCM,data:oaNAl0bgYdkwUrqFDz+MT2avSSJjVIe1AkaegbRkm+xu/xg2mU34vpcAkKz88NBljNW6wOkallDsNEkbqB/stdDSS5AfU78Ni5XbdSJ0RCTgpzcBeXEd,iv:F1ysVtcrjxrnPitmqX3y6m+ChqfxAImvLph41wBzsXg=,tag:vapCLSW32PuKTmqTdVJWVQ==,type:comment]
+    #ENC[AES256_GCM,data:GTxi+3aE/x1Vw37eSAUQVHd8mLAtZFlj1rBahve07v/DScr6fOQG4gaDJPIDmc7hDTWReSUwkjYzynTfQhdgXgs3mPxSJP4u3LDZSeuWjh5c1UGMQZgHY4fzQxo8PxOFQPWNPI+VYBznr3MRhI9tzeuzFEmp2M3mSqzsIg==,iv:ZQONW9/IO2XCJYBhkONW9y58fmUYRqrsssfO5+Ha0yo=,tag:1keaykvtkOP3F2P+uZxfxg==,type:comment]
+    #ENC[AES256_GCM,data:06vkvCodSYr4S4rkAIuyKT2qgbvoQwx7enOyonoHc59VnTe1PPaOimZRkfkeMlj1EDfKvHox2eV7zSSi71t5CU3Y0o7nlBa5g5ITwdHOeoM=,iv:+t+6USYDYxls6NrZ02UT7npBh5zEmnqg/qpT57g+zZQ=,tag:QV3Udc8poqnGafDymwFW+w==,type:comment]
+    #ENC[AES256_GCM,data:ZmcJV16jgo1a0XWAjieSmakYEIbIdgojQFKn4RB+1JfXzWIvG7zXhEp5oB/S42iVzBmrQgy9,iv:+JbvzOv2JUry23HUUU2oLhQiFVkrLa6fIloUHW07gmA=,tag:RZUqsy+Xj6XT4cwe1LWHqg==,type:comment]
+    DOMAIN_0: ENC[AES256_GCM,data:0CU6YujXUG/ZKXeB,iv:/WughjBT56LwLpWZuq9tTAeFNMV6S5zfX+KKPjbkk5I=,tag:IRNOHcxhAn45Kaln8+tT6Q==,type:str]
+    DOMAIN_0_EMAIL: ENC[AES256_GCM,data:pLWBqeQ91z+LnwrScDYegyo=,iv:6mjQKUryJPBIzNyVL9ZQBcsN/n92cpWGjzlE27VwlZA=,tag:han6xYbRoCcstaJ4Lv1fQA==,type:str]
+    DOMAIN_0_ZONE: ENC[AES256_GCM,data:pZe6QPy7u+41vI9e2NWa0QDRfB+uU9Fs5UVG1qZ9JSs=,iv:JHbYggEUlc4aPJtbMNe6p8U+m0lDznbui0eNSaflnk0=,tag:QMrI40/9yqzLB5xE3VJwCw==,type:str]
+    DOMAIN_0_CLOUDFLARE_TOKEN: ENC[AES256_GCM,data:qeqm3Fz78ZtUio8Kv5x/qxsG/MfPe45hx99WZIxSnqgsKpmWbLfkcw==,iv:l2nh5zFRnk5SpdZrP14H3ETX1pYRztOxAmxYMarjcl8=,tag:lYRunAoEtlfWI0gNip7DGg==,type:str]
+    #ENC[AES256_GCM,data:mNoBVpwiw/YUTx5xrWjR44rTNXBZwjxd3F+yhK7xpP2+qlheXW5ppngv7A8lG3H0k2JcAHB/wXmT08NRbNSiVA==,iv:0FURVMWKA9BEgCWpa1+htDh1jtQnZ/BR6nh2ygowSSk=,tag:P1WfNXYFThNjMh4d/yf7OA==,type:comment]
+    #ENC[AES256_GCM,data:dOvLIS1FNq4wZ7/ZCzHupJZPEQ5DHYdzKm2CzdEFv/qgDi5CyfhWP2MplmWlg/FU591/NWY6hww=,iv:zheERszy5HW5DP5Fbm5z1Hbcw1O3oEqq9DFA6iInpAA=,tag:3AnMDiEaDLEQe+8VIy78AQ==,type:comment]
+    #ENC[AES256_GCM,data:HoduPuCoKq/010F1E3+9teKWAimc7bclgA==,iv:Mq5+f2jet+BS8L9va52kfyg9H5oHme3VWYgJ11XUW3o=,tag:mAMn36EMuIffLi4U9pUGRg==,type:comment]
+    #ENC[AES256_GCM,data:rFMqOV6s/ZgI3Je/tG4EhKnWq0bwQRkGOuOgc/WkVouuoiYkyjhH3Ma8saPOljGQ36/5GD/3YD1zzZn4eTTCVvnpndBeUX1dy2HVA44=,iv:CwPkPlUqo0OOpUqKtTXH1ixPpEd4dfIy02VKwhI9n9c=,tag:wl8J/8IJy3rQIZem0qt0jQ==,type:comment]
+    GITHUB_REPOSITORY: ENC[AES256_GCM,data:4iuLQGoPIC6Avw6yIUfy2+3IUzH1Q5IFTW3iKQUaRgEAd1PyfNHZPVTReFkpmwVF,iv:G9wqUQpuqvh5PR8IoQrrHTJ2tRg3w9T1Hwkv1tJ4mJw=,tag:bOALF7UANNIVu4IxtR2B+A==,type:str]
+    #ENC[AES256_GCM,data:ZsSMIr5dVjCx1OGmjOx2Cd1kKvZIzy2LhwjzFlhcV4mJGvcdpQ4z1k/VEY3Aus52a7mGN7wyBBBfsEeK+oVX1ihFRaQ0efM=,iv:E90+RMdy3KuhXLOW5GezgR4kc4T0S/nOOQLmxDQYddI=,tag:M3LZ+pjVTmsZqnRXewZ/nw==,type:comment]
+    #ENC[AES256_GCM,data:ck4uji3cwDG+aVylcgoZSxhc4KeS1QG1a6ADWE57rKUVe8Zugo8Q3sSdjcmvjAbsDTKxWwrh,iv:0B4zVmO8i/IjfP+GjBSoVkLWz7CIjiHzLlTOp2HFml8=,tag:WF/3N+mmjxU4xxsswOTs4w==,type:comment]
+    DOCKERHUB_USER: ENC[AES256_GCM,data:PCxpSB4kbw==,iv:MLLn9EQ3/8pQKIeVht0oSjlkBz/i/zvAfC/A04NZOg0=,tag:1RTAXYk5uzfBXukNTgm8qA==,type:str]
+    DOCKERHUB_PASSWORD: ENC[AES256_GCM,data:/Jc2Ds5hcy6OodCcEOkEYkVNfrs=,iv:3vEHbv2qnsxINj3MqxkLhoz52G/kMknp0V/c22B//gM=,tag:qKQC6UOpGg8npsMaiuhnbw==,type:str]
+    NFS_SERVER: ENC[AES256_GCM,data:l39JAVPSTu8HtIc=,iv:ihAcfC6V/QIYP9DP4Lg31YDIpsibTUMkU1RS+y9S8a0=,tag:XntEpWEigLiK6ZjMUoAK4g==,type:str]
+    PLEX_IP: ENC[AES256_GCM,data:9B6fypIL54arqKHN4J5n,iv:FHOboT5Jatm1/LiDv8jq9WviOuvfUUPATrDKzHahGZY=,tag:bqd+YdoLO59yTkxODbxZCg==,type:str]
+    BACKBLAZE_ACCESS_KEY: ENC[AES256_GCM,data:kVxUdcCHyVLZ5/KBrZcAGzUk4uivdozbVg==,iv:VIAQn/+wNgmRNJBmUHwJjqdedTkZGbgzygVPnBhPD1c=,tag:EW58V38SFSOD5xltYtrBng==,type:str]
+    BACKBLAZE_SECRET_KEY: ENC[AES256_GCM,data:P/M7NYWEcTc4c2QyAVtkWYj6JDZpd5Zlu25pZWIp4g==,iv:ATyVcKdpP3FzAryvtIJUSdqEzHjDn0PxReAZ+TR/UnM=,tag:sjycDqlPADGmOu3rcBTYhA==,type:str]
+    #ENC[AES256_GCM,data:U3YVt+47G6E+Nuhzz5b3N1JDePjJKZn9QG0uBd/OVHdFSXwylGE=,iv:IVz/RRuEnjjZlI0yZMEHvAXI9d0Cd0jzhTRZb4w1X8I=,tag:DCsovDzNVLQGZHNwGAFsnQ==,type:comment]
+    BACKBLAZE_ENCR_KEY: ENC[AES256_GCM,data:KW9/0Gu3/pheZk8FN0GX+X9sQMs=,iv:o1ZpUkz7kSOw+65VZCabt3TpLJJBhVhv4w7/lMHNnS8=,tag:ZUKH2BPatVO20rGGersWjQ==,type:str]
+    #ENC[AES256_GCM,data:gj3I69YSQ+tFBAaxZVU=,iv:eTJytenopFipEZbJduaQLSs2KBPNQIJSlSOHRD5iR9o=,tag:AB3tM7kLz15rGoFxP+snpw==,type:comment]
+    PODNET: ENC[AES256_GCM,data:b6cbuBbvh3NpiqZqhQ==,iv:cPsP8yb4tdcvRmfgMOFsEUfgi+Cv1XRdnLWoCwUogrM=,tag:EQsuoQvvfQ4ZSnhS+71ltA==,type:str]
+    SVCNET: ENC[AES256_GCM,data:GJyUswS+IYmSkFqReA==,iv:UCx5RSm0/qtAUyeDEdFpbDG6EJqYCjIzUIGHXkXkcCk=,tag:xShTrEMuJ15V2IiI2vjKxA==,type:str]
+    CLUSTERNAME: ENC[AES256_GCM,data:Z0Z45w==,iv:+cd32RPGlEpZVxOHfLj2CKD/HfiSx60dpSPEJoXVyho=,tag:EsbwazCd+guCAMnPdd+Bgg==,type:str]
 sops:
     shamir_threshold: 3
     kms: []
@@ -57,14 +57,14 @@ sops:
         - recipient: age1xerwm86t75dl2v0sqq5xvzag5q6deawx5en7rqy92886049htaxqagw7yt
           enc: |
             -----BEGIN AGE ENCRYPTED FILE-----
-            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBvRlNMVXI2VFp4WXZwWnpk
-            NURkbXVSeXJ5MUE4cDBLMVk0RzJjZVZTa2g4CkxtREtWUDVoOE9RSEF5OFBKc2VH
-            ejNBTkcvSXM3ZVZZOHJXTzFFQ3NYU3cKLS0tIG5LdEpsRi9ha2F1TnpVbExrTjJY
-            bjZLMlV0MDhyRUliMnFaajUwRktXeGcKM+iPi9AEGu0zQWSnXQHYDHrxbUdjqReS
-            Z2xBVt+/7XaS65RwmjRhErEH8ry8UahZie+zsEeQDA49eeo/Z0JdxA==
+            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBBb2l3bUJGbVpXR1V5L0ti
+            alp4YzVkMGxmV2IvNE1QWCszdnBqb0J6Rm5jCnNMK1BZK1ZEZVU3ZEhsRzdKTGlB
+            SzZUblBORHVuWUh3T2lyWVBud0RxckkKLS0tIGZvbWI3VVZXbHpjRFdlczc4TnhJ
+            ang5TGZuOGNwN3Z2eGIwazd0N1g1WmMKeXjEZlWkb3+5ELP15ieLROCmXTq+unfl
+            RpRk4F3GkyHP1ECLYvW6rXuQ4OSSiSVQ0FRGFCbMyQSUUEja1/k2xw==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2025-01-19T19:43:23Z"
-    mac: ENC[AES256_GCM,data:VZfpY7w2fWFDT6vXY14/8fHuDk1WYA82xwbFMmEA1eqRW7t/F/j71QKYvCoC00G24UnkObYeWtuCPb2ne/8Bjo9fbB+CCpC/9xKiTPC4KxYPAe+qPbXsHxYaHDjnhqCvgGZ3Akcd0mdwPSFT3Q9DHJGuUvepJ2u+d84FgWYrJAQ=,iv:TFiG9XMQncTIqv/QodH+RynGDGOBeUE1C8mhIrAv/Ao=,tag:Jx+5NRhlpaO/xDxB5FjFZg==,type:str]
+    lastmodified: "2025-01-19T19:44:40Z"
+    mac: ENC[AES256_GCM,data:Rl39KEQbl8zl9Ghg8dKEjA1tE0a4ngqt6RaSMRpnNUSdgbOnszULPFQVgJkRHZ/GPwNVo+e/HRPyzIpCxkQnthen9MR0BEEGYoGqhk4L+dcv0m8GRVdgZ+LNpDMOFdVAgr7NVZM9BjTUM8oiNUl6BSDZ9rAWdR5w5W0AFnqHDQs=,iv:OuNRKzW5NlOfNycMpYrUJYyboe4wQUUvD/zS9sDSQ8E=,tag:D+vgscGfa+3K5sTCqv2pLw==,type:str]
     pgp: []
     encrypted_regex: ((?i)(displayname|email|pass|ca|id|bootstraptoken|secretboxencryptionsecret|secrets|secrets|password|cert|secret($|[^N])|key|token|^data$|^stringData))
     version: 3.9.2
