--- a/clusters/main/clusterenv.yaml
+++ b/clusters/main/clusterenv.yaml
@@ -1,45 +1,45 @@
-#ENC[AES256_GCM,data:gxD5dpFJ6fnehu7PXZHdu1cflXeVTZeXp1jIpaBNVkguaJ1VWsPFu3fy27AVjvDQJjiOznRQ1cRon+8qGs5OYJw=,iv:liXjWTDEFrVsUDqVzaaiK3Tjr8e3sfnbsYf5coGasSg=,tag:2Y7SiGve03fYpe00LVI23A==,type:comment]
-#ENC[AES256_GCM,data:e806tMRRUVePf3ajuftrzR72RK7JWoiBTArpKSY1RIguouTde2IluSA8lp8=,iv:uwCK+nUyJaa51bE3OmAa71rUXPxZEy4PExaazzsJI+M=,tag:mTCdGI8ggH/eVsgNPZ5UdQ==,type:comment]
-VIP: ENC[AES256_GCM,data:C6r3XM8tCWafim3yJg==,iv:/AN0YAvswlfF3T4z7wmBQxBAWdL4je3+yw56FEFjuHE=,tag:fF+nJL0AdCLyu/j9RgUaUw==,type:str]
-#ENC[AES256_GCM,data:m3bwQPMgccarWrHGwNAlEe260oQiODI0Okr5,iv:TqnHa+RgPBa9jinhn5p51Xn5i040yb4Ax8T1IZ7wZYQ=,tag:Bc3C1H0E8RwU1c0W2qpaVQ==,type:comment]
-#ENC[AES256_GCM,data:AZ/BZCRZ4q3vbbojeEKGBMhfC6GAdeVMFg/WwXzBcvDI4aYvwJL2MpEKFBzYPnXgc76nKE+dji/8kvOWbAHH4OyajATGQenxvRAkyP7Ho9u1IlDOYl2rSEI=,iv:SUa/KG+nxTMMFjyRrdd2MEzMP/6UNW/3YTHLkfs+jPw=,tag:rJyNhdYnNMhc7Fqm6sBSyA==,type:comment]
-MASTER1IP: ENC[AES256_GCM,data:TC7LrhZCPIFLQWi8Tio=,iv:GKOJ/QVchQUi2YJW8dAkx/PAwSJQQBBv60QeKO/6/NQ=,tag:kfxhSjsQ7ktxnzMi4TJcYg==,type:str]
-#ENC[AES256_GCM,data:QlpqLi41fVMrDIMNa1nNROiSBf2Iv1GzRfQPDvrLHLTpZA==,iv:ZR0ce6YvTL6BogBnRA6di1QC/xiO/HRfrEhx3FOFQI0=,tag:CHc5J7pY4GeqTLSnwKhs5w==,type:comment]
-GATEWAY: ENC[AES256_GCM,data:F1U03warPQVWkn1gIQ==,iv:sjpRdFvKU/Fc6bk2iB4KQAxu9Or0ejJytOQ99vM1jII=,tag:HfACvbMDOq1kpB8dLAfstg==,type:str]
-#ENC[AES256_GCM,data:MirNAlg3/xSKbTyZRo8Qt4sEmbXbYsa4E22ud5NgM84B9BUiwD17a7yVq9WhxK0=,iv:qn3Jh97Nq3nt8bfSQphX6CJlPqp5TCf74yRFEaodqdY=,tag:0+Z5ei/RVgRFUysB4AKnvg==,type:comment]
-METALLB_RANGE: ENC[AES256_GCM,data:vyDY6sf08p3PFUVJBPRyvF7XV6lbKEP5WzYfeFhCNg==,iv:kOqIa/r8HAXwmFdT3VQ03pveUFOu24f1ajDyqdV9xn0=,tag:aE1t0v297oLDAmlxeIuHTw==,type:str]
-#ENC[AES256_GCM,data:usYRZQQ89TON2w9RlG+03OqN/5J7dDFl1Yir7hlGkeWAwZJ42NT2AwTD4OTSIrmjpsNDhYR7lviWDHJXU5WPsdZjBkXbqCcLnMUQOf2K1iTh6g==,iv:bQjBm9FqOBNluTFuJM26AdQzjP0KoNdUhahcMKL+hQ4=,tag:5gjeJZf6D0kj9J9JNdn2Zg==,type:comment]
-TRAEFIK_IP: ENC[AES256_GCM,data:jfkDG2dA6ahbq18a3wjq,iv:OzyYAMfG9M3sztZ8+F1KvqUev5mtRK9V5/ayYsVGMoA=,tag:zPrqsmS8WdorKASCzwIV+Q==,type:str]
-#ENC[AES256_GCM,data:xt/zYUG4njTDW6AFANRimVmVdUvjOdFCe6QqolHB5sYl,iv:DcXwAXXvJJSb3CXbMyEYF4x7sCT7P5ZPDASpEr9xk9I=,tag:614I6GLXc0B2UbN8inA7mQ==,type:comment]
-BLOCKY_IP: ENC[AES256_GCM,data:5doWNeq8F+5lH+aiFtp9,iv:mgDcWkL6rlb+uxlNBYfm7TG/gLekJw4ou4GQ4Ys3OKs=,tag:0C4OPl+N+B/WIw481kf9jw==,type:str]
-#ENC[AES256_GCM,data:vathlhFsCNWcWoNe2YO3g3RZyhPF9B4IH8+Y1pGZtbBATWGm6QyNWBCqs0BjXFbgu5oLan+VQjrzPEkDOSENoUrNnRnqdU/ho9Mre4Tblnc=,iv:Y0DtHxuh8GBlC4y4jtgatTPnRx7wy7sr8Q2rJzgrnZ8=,tag:FIBHynEbMcEsfLqyDGR8tQ==,type:comment]
-DASHBOARD_IP: ENC[AES256_GCM,data:id5BPpHQpWU5/bzvFzep,iv:X+SoukyTCaXqYZE/D0YoQD3vL7ahcYy5C/hX9snGDOg=,tag:2lL9dHWfmDdIAhAOh2loYA==,type:str]
-#ENC[AES256_GCM,data:8iCt91y8GuYePWtPyZt5OSXmyP08MGAuemmVXsU8ld5pXSwNgrWqHBEj8+D0gUq0G5YE4ULSKBQfBNsBRsfqCeN9+KQxn5XBJpL0en1fx11D/D1ohCOG,iv:B9LuHwz2Fb4gSfwf7BHMFcMiLr4DY6+S7FYiwdchc24=,tag:mWhrx0q4vacDDd1+rLUzqw==,type:comment]
-#ENC[AES256_GCM,data:J+oJuVElAACR10v8FFxcsx2+6YD/oWZqfh4zbd+W1QP2EoZT0z/8Zal3SinHDW6v3pmq87c4D1fT/rAAt+BCsvc2Xkg+wnu4335cA3NrpZtuOKjm69dqDU3w89bJzi3IvaOwWp3w2WBtF2geQmf2CqgQpArC/qzY2MzZDA==,iv:VBzMa71jYvhpT6VdibCqXrqROZoaCZ5VlMDb0zn0Rf0=,tag:RCrJGDpV1Fss2QOiMvjcbA==,type:comment]
-#ENC[AES256_GCM,data:zl58sGW5IqADW+c84uEwgolKp4Z/gsYT01SpsWY3BuFjmUlQE1MG5E4iXTTxvwj6v+9oPZvqHihg2oPAMPBjjjzUG2xNMCsIXfReWuhgWCU=,iv:ZEGYCGXvqpBboYC3M+0Jrc+A7jT+B4prk5Yt65CEo/k=,tag:UiE3UkqWMD4UV5zY0Zyqcw==,type:comment]
-#ENC[AES256_GCM,data:CSa1T1QTMczaFcBgL2Bi0Mm/jdE5fD4g0U5kCllHndf+w0bD0yRsFqkKSjqg48v/DplWKttO,iv:KiNVq6anKAepzvSHsUERpt0ildNYOkau79kaEZLAncU=,tag:/0HyMTmOq+Wd8ZUsNurXQg==,type:comment]
-DOMAIN_0: ENC[AES256_GCM,data:eHcVOw6hfmfn4SWd,iv:X5rIqLZK0I1jcdk3o0q/ygwk8dt626E/3EE1z8KQny4=,tag:knEUqkqtLNlmyfNosebs3g==,type:str]
-DOMAIN_0_EMAIL: ENC[AES256_GCM,data:NnVH6tr6IKXvD0xr12t8spk=,iv:kbdPDLwSPMtasXJ+YxeJcmaZaBxIn7iTzWOePA5qOPg=,tag:tyqiymFvuwGALC/Pcog3sg==,type:str]
-DOMAIN_0_ZONE: ENC[AES256_GCM,data:GDiGDTUf1hD6V/q7fdPfcX/9LFpmts8dJcHYBDOvJ3c=,iv:xrSFdKOa56CGDrVdKWbTJsdUNeJnp9XbS2XAXACvDzM=,tag:0m2nuQC8XZx5Y+NJA0loZw==,type:str]
-DOMAIN_0_CLOUDFLARE_TOKEN: ENC[AES256_GCM,data:EDAfp0s4n7BMD0je1BMiq90QY6n9LG/1BKL5F6R0Ru55HLB1mMe0kA==,iv:4cdd1qh4jsWq6VJ+COwBLrFgJL5Umgwih2ZVnwy1UEM=,tag:u2A2SS3Jvu69B5knZI7Flw==,type:str]
-#ENC[AES256_GCM,data:yH1QPG89hAk1FWZqqjEoCcZDD2KH0TD2KcrdbDc6cFbIVWa9vrtJnuAa3hWDkhJf53qUD+VWdEwxUaip9ibMKw==,iv:jYShqpDa3HGr3+yCIiUmxvjdHWVKetPPLDUaLeum3ps=,tag:wZKvaRCvZz8tD96LbeoEkQ==,type:comment]
-#ENC[AES256_GCM,data:4QZpsik+i2nFxCURqgYehwQy3Vchvs60WiQ2G3e+QvBW0Dgd2+jOdnPwiCitwRdoEPuTiYJhajk=,iv:+qRgKJsglMdGKu7MPLId81Y+J2/KpnWQC+k+CMEG9Go=,tag:3g9YZj6eVDr0nHaQ7nZU7A==,type:comment]
-#ENC[AES256_GCM,data:aIj5r30h+OSBTU5VY1OYq5L7YGtXUhN8Dg==,iv:ZJv7luNIeFmwprkAmnfGihEP2az2gIlusjW8tAqs0f8=,tag:L/aLnhDZqJGZu3bICUVMqw==,type:comment]
-#ENC[AES256_GCM,data:5pdY/hQ1jsOsmwYOqQRYo8F8LLgcgRfbvJKlhhFJo2hnLW9PEvlnFOpKFoS+7ZwaMp5W8slyNWlOnIBmi3rczA+2Izk7mBVOlAh7YYM=,iv:pIXaGOpbA6b86SJbEHlsFe06zJ61VgIVLcBlFB+ZAhA=,tag:i7FeczYWUDtmVN+DghXWIg==,type:comment]
-GITHUB_REPOSITORY: ENC[AES256_GCM,data:g/1V+ZD2arn6Kipp5BgcCHBrrDR1p70uDGR9QpsKgoJUMYuhZJeC2Xqx7iDRfyks,iv:i3Ix8LxEb2I3whdWB3+cEGKWnCtniGwktAFy7Ftv9lM=,tag:hoWvnTUFmNKlg4b2XKu9aQ==,type:str]
-#ENC[AES256_GCM,data:Db36J2GACoJ5P6HgByR0dpZCW20sGfPvuaxHmlkPO2MukurFvddpkMhF6qo+GvIqYGA3tGiCa1rGa3tWehdyfqh5NEInOlY=,iv:/TDU2RwRmQZRuVLGcOcTrrrDuCkdc2GL3R232Vmu6fs=,tag:ioQ8899SokEpbg8zFcXcxg==,type:comment]
-#ENC[AES256_GCM,data:PxFtrmrEYMbPDo8dxf/Swj7wpJTAkat8ZAmND93oJ8xdT7XrfOkz+K18NZic5usucdP8qLyk,iv:vSvppyix7s9dNVF7CNyZ7SU9o49qDAowz/L8fleIuZM=,tag:n7DF2INlHxkC3EoUVWHMjw==,type:comment]
-DOCKERHUB_USER: ENC[AES256_GCM,data:a7uxzTO8GQ==,iv:pJwllpkyxU9585S6VZCnyV3G804qP/fOL2vMb6uZcw8=,tag:WW1c5NC/v340DRbM7C978w==,type:str]
-DOCKERHUB_PASSWORD: ENC[AES256_GCM,data:Dcl2HEPyiVtSI81bzjRVg/W5pFU=,iv:QsKZkHcjsUfkCABGGpuBWB7lZNRdy7SX2XFlPKi9pxQ=,tag:8wlOykg/qPHER5GOv5Gruw==,type:str]
-NFS_SERVER: ENC[AES256_GCM,data:xsHZQL3ZL5j32hM=,iv:bULzOiOgNcrlfxTwnsUUmVLNFlLd2kHNmEB9qBNBES8=,tag:fBzwv6SBuidkB040q68KjA==,type:str]
-PLEX_IP: ENC[AES256_GCM,data:bhAQQXuQFvt01HOl3TIm,iv:HrQAoRWBNexevnkLo9bqEAmwK8YfINdH70S2Q4lmUzk=,tag:Y0WbIXsASNuePgxVX0Tf+g==,type:str]
-BACKBLAZE_ACCESS_KEY: ENC[AES256_GCM,data:qCFfkmdEWST1vs/VdeZXphndbZtSegAaZQ==,iv:jQTB+wJO3RMjf29AjBRXZnmbzB940kPmsRpjLbVQJC8=,tag:Gwz6WJODPuYYxUyBJ3FZ2g==,type:str]
-BACKBLAZE_SECRET_KEY: ENC[AES256_GCM,data:kR/PrXvszY6yEjnACdtoNrLyTnT1o9eDVInQUowEfg==,iv:iBdf85fAFR7xesSlB4+4CGtN10zeMBIoRz92+8FWtFc=,tag:MCR1OExon1rS397evhI9VA==,type:str]
-#ENC[AES256_GCM,data:pvRqgCLUhyrrqD8KIu+dBqyLvGvBW3/p4Xtq6HMKqP84b0yLX5I=,iv:u8ctV+eZPa8c0wF9D9NChKeGq/JyyapUxpwvN4wVv/A=,tag:6dxe2RF3HShPNfnMk/fRnw==,type:comment]
-BACKBLAZE_ENCR_KEY: ENC[AES256_GCM,data:ER5stc2qVYACeRvB9Z1Q/CJRH6o=,iv:csbXhNbEoG2G5gi0fdafqgKkNO5Ai4VKkm/wSsQV40Y=,tag:FlvZKFzRmP9wWS/1ApYuEg==,type:str]
-#ENC[AES256_GCM,data:h9FnIDa/MxYP+ciYSTo=,iv:ZQzdIG2/Q6NQ4Ue9aBgeGquN7TlBJf8C4kX2B0oLK4w=,tag:ALsTwBsFAGjJzfZWSxLnlA==,type:comment]
-PODNET: ENC[AES256_GCM,data:4Gi+qrpINC6IGQilvg==,iv:XMHcZwinDshBdri3DxuQxjkJ6+TOIj0qvHZl7IVf4i0=,tag:QO8F1QcJfh9eTB1zXQPL0Q==,type:str]
-SVCNET: ENC[AES256_GCM,data:hjZHYJlxunuaG1z6BQ==,iv:e5vjVqkiIjRbs+MZg+A3XSd/1vRwUUqqJ67DBjucAxU=,tag:GE5fDw36EwZgN9sx1jDEUA==,type:str]
+#ENC[AES256_GCM,data:AfsdV6TQ6M9xSxkrkLvCkUyM3zk57X/f4Pd+i88oLWJMq7YzrqcAqYkoAhE8sMCDLqw6EA9rknEdRwqYNGkSSc4=,iv:rf+/+MrTKwB6YR9NtXY44NR8mVDUoTU3XY3XEXuFEIU=,tag:gNPaAEpZr8Otrjd0/xwAPA==,type:comment]
+#ENC[AES256_GCM,data:xfci4wd/ehqtvp5xpxNb4nSX1bozZwfJ/hwIYr0NL8Ye0ruvuKflo20wtKo=,iv:pyeSb0Trwgu1ktGyXbbO4cYGyyj9OgEh8GZF1OxbTxg=,tag:rwc9pKRetAHfGg/cs15stg==,type:comment]
+VIP: ENC[AES256_GCM,data:yYHxW4h9fUISDkHRgA==,iv:N7o8lidTK3CqZrIpl0QLysvpiztBRmN9H4ur0Edhd34=,tag:I+tHzu7zC3wMJoIVIgV7ag==,type:str]
+#ENC[AES256_GCM,data:Mimd41wKAU3oGsdlTjHdJFPaA2dQzj2wJfJs,iv:QNtZD4vsW6qKRaohHy2EDF8s2rFdfSwK2JTI5MTBJoY=,tag:SddZR2Yet2tN26t7uogwcg==,type:comment]
+#ENC[AES256_GCM,data:IX3BrgNlj562sxJi0/vgR2wSNceQVmH+Pgf3+/gLOIKETSNTHE7T6gxpqRYh/7PJFXKGPdaW4E8PkHHfLGrceFr545pQx1j7EosQymC+9VTNDONuDoH2G6c=,iv:yG8h7HBNfnThON4pI7ueVbi4/QphG4nbt35qimvfqtw=,tag:JIRFvIqCK9TVN798uLUXhQ==,type:comment]
+MASTER1IP: ENC[AES256_GCM,data:Yk3htKLHGBFvabldAgU=,iv:e7TnuJuS/8idaZCuph9PNWtdPLASMFNSM5DRsDFf2qc=,tag:XOrqlwMMc0l6/43Iav1T+A==,type:str]
+#ENC[AES256_GCM,data:7/EAPTOQn0xwylsl6yG/qF/Lqwwc4w6BqrTJ408acb01GQ==,iv:gDWCvscYNtDs0I3xhp37gohSeN4t5/m+BUwaby8eZZ0=,tag:ydJl3BayOh0TUs8aq237sQ==,type:comment]
+GATEWAY: ENC[AES256_GCM,data:QVXvLGjJ4VW4GGDbbw==,iv:xq1Zdfc+vRXqlzcK9T/Gf4KlwMYHQD/QjSes2NgnxMU=,tag:FnfZ7CvcyHnMjIb5P/VvqA==,type:str]
+#ENC[AES256_GCM,data:rc7jeEzuAFWB0xf5ZUF3L+hHyFakh6WTja3vBKr2oPeLG2zKjrulvSN+jItXssA=,iv:xOXar+ZkmUHYs+W+9dc+TgEwHdpwEGTFeGeGZZTUxIQ=,tag:mvUYfrxbRYSgJGD1HwWMZA==,type:comment]
+METALLB_RANGE: ENC[AES256_GCM,data:lKb0R+djN02MBKJ0NV/pyK0tfQkbCXOrSOyKlmMMjg==,iv:6Gh04NLx9ggc+1fE4meD1cLMRYPStPY5CN/W726xkuE=,tag:n02KFdUzTGkEfXuCZ/Djug==,type:str]
+#ENC[AES256_GCM,data:gYiaDW0Qt0ByJ0UAepLxqd+cV62uuM2rzAbgxBvvuyY6sgjPfvTe4BxNYoOsf+XFOHqoGAeueg6Ywk85SiQfEt2ZZJFDu3cQ6bIWOysTfCMeKA==,iv:M/bFZ4pSdfbJSq8S1FDX6GtVbhGkjc/Yc8s7lYKetDw=,tag:B4lVNnCYrz9S7Hjrqw22uQ==,type:comment]
+TRAEFIK_IP: ENC[AES256_GCM,data:JK/Cfia8r8m9+52u2DZ6,iv:Gs7prryDQe3rzYlx6ATk4pkuwR+OlzA7CGJzoi4oL+A=,tag:m5OJjCpWATMGtxNDNwQ61A==,type:str]
+#ENC[AES256_GCM,data:t4ZtOrkWG3NTpB26LIXJkDstu0rsOCQmIaGWPxL+sajC,iv:Usk5sxNIAhIw1gq2QiUylXjJTzyYXvIX0oKs4Xj7QtI=,tag:acPhk/eayxIkW+WeydSb/Q==,type:comment]
+BLOCKY_IP: ENC[AES256_GCM,data:RTbXMtmEXuDm8u8pKPgR,iv:jLdpLQfnjr19LiKBvjnENS2NMsLFkG+B2ECNWzL8yIc=,tag:WX4kL93GH8B75AvzTvYJRQ==,type:str]
+#ENC[AES256_GCM,data:TtUy2rgr+fW0IYrZ2pKo9iXxXfjMgvq8r9VJRo54HDxgiv57K4mhcruB9NiINPjHz6xscnsGMa+acJaY9Ix5b8ox1ff1P3KQkZsNLVDb00A=,iv:SFzZpKlIlfaZk3QYoV8ruUjtESyWr2o8nb9cyZewlso=,tag:yUUfaIgGu5hTZrea9HNGOQ==,type:comment]
+DASHBOARD_IP: ENC[AES256_GCM,data:jSSxuEl8AOz20gzcyjoc,iv:U7bC2rvowafRXMPML124RxogpBdFCVQgu3/Dcf6u2gs=,tag:WBq0b8nUzQroqEUWX0uSDA==,type:str]
+#ENC[AES256_GCM,data:uUhaRLX6jgTxkhVzb6pFWO4MRryBgOqRhxsd1KbD0/IdSP/c+1U07hdx2gorr8NXLJaFqjdB8tWQMN3ZrK1oVWAN3/jsk6d4XJ5T+4Z3fp8bRs/Ibt+a,iv:z81NGEUHR9hKtaRfHCVNrEEfY+8GUWUv77LZfzmqrjs=,tag:auLj5bxGwkiqetk5FoYTtw==,type:comment]
+#ENC[AES256_GCM,data:J7Z7AYb07fJfXHRa3aAmMOCx2XO5IHFwNSRcVsEoheGTAL3rg3Yf1x5FOR64naCHDtHD4YToh9rA8619pI5wLJiPfa29nlAenZPjhkzGTXcTI8hIcQi9wAKeMkKkH3eD7whFLUJb8+NVkQXCHGbL2XUCLpvAU4XTgjo99A==,iv:G2qrWEgNWDIG+crXGMymuKR8b59OzACQLIIPOsX3sis=,tag:ci2fjmTufJXhSpy2T8IYBA==,type:comment]
+#ENC[AES256_GCM,data:49IbmQeRKw5b31eyszcZuCX5D25gmPnehT4BrxTHqSCwYw3l/J2/3BgiO17CCp5C0oxI2D8f7MUU0aPxfyR+l1YYh5VN7BEaOxZLfwPAxNM=,iv:JFv7YLkevgnZFhNEGgOAFMF5hPxYA1zY+8WqAAOxGs4=,tag:tW/eVRIGBjlnGvhQqRQC8g==,type:comment]
+#ENC[AES256_GCM,data:b1ICDjMzhEfqxrAnVvf8O/ilicGwllCDaHIywRgQLK5Y48d6twCip6HE+fie/7/aDKQdqKYu,iv:xEk82W5PkoqyloXCv7FvqjoKzSErDdlGbN5S++3vRVs=,tag:+PdcyQurhvZsby/Aq/t9Eg==,type:comment]
+DOMAIN_0: ENC[AES256_GCM,data:iITumf1TvRri7Z+f,iv:8yyLvi7wq5rjCH8N2BqndBCFDxZh+LD5CcmD0dtIyuY=,tag:E2Wh9AqPkvE8gUOJzaaZcA==,type:str]
+DOMAIN_0_EMAIL: ENC[AES256_GCM,data:IjTTQ7TH9mKOou442go9LgQ=,iv:pJg4qnOcMkcjcExz/oGl7kSYs7hDiFtTqfsaP3iGVeg=,tag:b7gk0F7OwcrhL05QhRNgyA==,type:str]
+DOMAIN_0_ZONE: ENC[AES256_GCM,data:VOZvC/IoEaZaivtN79NQCj7xosLfpW/4VKJyAuPpJUc=,iv:p3ZGe7psRAD5P9yRc1DxxmvitugSEN0rwitzviXN8zk=,tag:srgJstwiHkKw+ipUZZ8NcA==,type:str]
+DOMAIN_0_CLOUDFLARE_TOKEN: ENC[AES256_GCM,data:V3SoGJgxZW9WJBsGZC5BNCnM0YC9N/PVX1npR4BuFbwcd8lkWyB8Lg==,iv:+oTpz8jKFRe3jwnHzOBJ4PrLV2oVPjDHNNOATLnffZ0=,tag:2cE2ltDfwOLgi1GnZXbY6A==,type:str]
+#ENC[AES256_GCM,data:e78Bff9/svHs5PP8MA7rUKEN8n3nujW0Pz2cXqT9LRWpppvzI1j9NWITyoHF91KW4x1I2RLyRS5oW+tQIQ6O4g==,iv:B8yU6f6KN3umaGnwRkOwAtHOdaviYK0qJmhsgTWmIwA=,tag:PIkh2IFA44lqobjE67xS/Q==,type:comment]
+#ENC[AES256_GCM,data:yrL5zqGPYSoYJVoKNwANclFRS+Nfsqhn7mREtmYxCEich5Lf6/SKVFqm73FQ1ODOcAD6vfHuDV0=,iv:JyYh/IXarMjTnGsVDbp1ZvGclYKiR2VLo06jtxp+CWE=,tag:aGMbCp824KB28bu/1FkXQg==,type:comment]
+#ENC[AES256_GCM,data:NyHkNMY8B32IHCvhrn2gMHOhNJzaCO1+sA==,iv:s0uAHLa86YHWpVeauPSdpZrqi1t2BPkGnPjrFy+1nuo=,tag:LqvcYTeOSRogHXOBgQbbOg==,type:comment]
+#ENC[AES256_GCM,data:0uQHlxCiAKeYrPm72HR85SUUkCvH079Rb9UT11DQDnWQUPYWlxvBTZrRzx8mPDh24df7W2giBR0vwQPpC4QjI5EnBBw4t6ZJkwJiBTM=,iv:S9ltarjTvwGB1lcQcgadem2dhKRPX10+v3SQirOeLeE=,tag:BXiSgQAUq4JBgbrJCv/7/w==,type:comment]
+GITHUB_REPOSITORY: ENC[AES256_GCM,data:bwMEUYrtoK6WHlLqTjRW4S1BgcqWyouGSwkqula/71r7VlMw8wytYytxrfOP73Pp,iv:4P8dre41vO+gqNCa1toTHA8kfSfDj4MMDY7DOcGtT+o=,tag:oSCMPE7wp6OjDGv5zktgKA==,type:str]
+#ENC[AES256_GCM,data:2re1HFeFMvBJFhPOghHQ1eIPBj59yWFxzxkLXOYS6yS5whfaBGdsQLXFiFI8UkCoZS4lGQ1ncBRcUApbpwHTWVGEqB8g3vY=,iv:borW81VL/6eWMnHVMVuzNZ095vh9FeqJoCIkOUYUCBY=,tag:SDEi4b5cmUoRExQli8d+ww==,type:comment]
+#ENC[AES256_GCM,data:3LPWrnmN+Do0r1MJoF8jdlho6X4EaD/Mow6giiiGg0cvxZOVUmTg81QDlUTTY/86hWnvGcU2,iv:+SYqvczPusMzg0BrYjT9TfuDfisvtdsG/xk8pNBshIo=,tag:E1SaduZKJXY0DSAbebslnA==,type:comment]
+DOCKERHUB_USER: ENC[AES256_GCM,data:gCwntGM18w==,iv:To9xMcZah7LJrfVDqrzEKmaJvYcZdlTH4edlaVUm0W4=,tag:xkj3A8v+xKTVgv0gv+8/NQ==,type:str]
+DOCKERHUB_PASSWORD: ENC[AES256_GCM,data:t3nPV2JyXkpyruxc/N0arLx7ZIs=,iv:lCi37TX3fIRJ0QvIfEvhSqkCZ36wOWsCJAnkPKQg+WM=,tag:IMz7F9z3cKk5IqI26ktC4w==,type:str]
+NFS_SERVER: ENC[AES256_GCM,data:S0Y+EsFN1qsbbUo=,iv:hWLXZO+WqbOYkIhTlkrhVg6qDi5ZwPQnZPvHLFUSrj0=,tag:K6ajPz/mB0HccKIgQ1mVnw==,type:str]
+PLEX_IP: ENC[AES256_GCM,data:C4kgOvkMlol239fX2fXz,iv:b+DdG1zZVrSIilugwUmhM8XiPxZn1cSk9gXjqB4sEos=,tag:+6prijPcF5hVJuiMCZOwYQ==,type:str]
+BACKBLAZE_ACCESS_KEY: ENC[AES256_GCM,data:CYB2qa0aIA1AX9u2KjGYslFP/i/8VBu7gg==,iv:JYdriOTrvgz+F/LLjSVvLx/x3iW3Jlgh3tDD6VnsWms=,tag:9UJ8G7piP8Gftsx4n0VVnw==,type:str]
+BACKBLAZE_SECRET_KEY: ENC[AES256_GCM,data:p92dOQxlmLPkzafZG1CLp46LmC1Ouj2eVxQjGEHzwQ==,iv:aLePlMrJctY0QJMdvb3W0CiN2/U+jGgmVef8SoASLFQ=,tag:AqxaxKmgJYlC+Ao1YJWsSg==,type:str]
+#ENC[AES256_GCM,data:0TjLKQjXxdytsuFqUzcf0rop/GJaOSBYd9j4t7vIMJbdjgwVDd4=,iv:zNQIYtIuLjDFzoQXkIHmvbSAtt611acj7hNP1QMwpUM=,tag:hme+qg5Kj2DIazinsht27A==,type:comment]
+BACKBLAZE_ENCR_KEY: ENC[AES256_GCM,data:S8Hg0vVUHX/VgCatS/hy8e8SWKg=,iv:v5+rd5TgvUDU9RnMahpPu5CTydiI4ji1j1i5FvCIAGQ=,tag:K0vC4+Ot+AODR8JDNYa69A==,type:str]
+#ENC[AES256_GCM,data:KEHFBB+LS4UzXOiVaiE=,iv:ue4oAjlaK35FhLTY4GoOohusKkC0coqm3VO3RJysDoo=,tag:ZwsbGDGKJDMqbTG0mnAyBA==,type:comment]
+PODNET: ENC[AES256_GCM,data:NyH6WfLODiArZENLkg==,iv:Oc7XUnYwE0fiG9jdf6815MvRvLbwnwoBCEL4fDrwtyo=,tag:x85YaswFnyc+Iy2yQPdSpw==,type:str]
+SVCNET: ENC[AES256_GCM,data:Xeb2qKqhbwEKTQ9Zcg==,iv:DUM4DLe+bGpKpZfJCWkNNAk0rUyAevxtITWH8eeyRuY=,tag:6IPF0K3hy5/x2zNl2zYuPw==,type:str]
 sops:
     shamir_threshold: 3
     kms: []
@@ -50,13 +50,13 @@ sops:
         - recipient: age1xerwm86t75dl2v0sqq5xvzag5q6deawx5en7rqy92886049htaxqagw7yt
           enc: |
             -----BEGIN AGE ENCRYPTED FILE-----
-            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBRMnF4bUpoU0w3RGNJSWsz
-            QmdSSkZNVThobDRFY2tTL01Ca0lkTXJlQUZVCnRRSmM0RElCdi9qUjF0dStTU3l1
-            RkcyOUE2Vm9rTTJBMXlBRFRsSFZIOVkKLS0tIGhjNWRPQ1B0eGhGTFNFZmRrb0Mr
-            WnVmTHlMcit1eG5QR0cyTFE3ZEtXd0UK3ja9VTrfbQX65VllsjxWDz0Cellr24ow
-            TWkpCNx40awcFI3SVMM4RnrGcNcZUjtqYJsLSIyPwyTz5kCNGMkeIQ==
+            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSAzV1QwM2pEOFdXMzQwQjkv
+            cWQ2NDQ4dmYzVnRMaElxWG1YRVNQSlYzWDNZCkZ5dUZDZktjSy91dThIZThmSE9C
+            emlYWGk1cWZBd3pjN2NGa0EyWUZkM2MKLS0tIFVaTXFVcnZTeHZ6QlRwcTRsckpk
+            UHU1WDZER0pUdmxLSHVRUkdPZ3VNU1kKfdzgnogoD/C3iFVdCFaLqnC+9vGZZyeS
+            orrFwOVulB1Ajse47jb7pGmEmWDDDz7MtnrSLSRMjagxkNhrrzHEPQ==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2025-01-19T19:43:23Z"
-    mac: ENC[AES256_GCM,data:IsDTBW2O017fAgvSoZYQjmBQ+b2mKsS5VzFiqPClJd7Tq2calW23W/2mIZLGucKhLFRdXYpXxioYnIaW//2i9B2nHy+f3+4Oef8nT6oavALARxECRlKPq+UYvW3jhWuxCl1Mf35RnYAo8t1rLaWRhsiXTvwzmea+ggQ2BWIu+ao=,iv:ZCY0mYRfaJWIHIY4r1P10hOToaq7Vnd0PR0XhA2razc=,tag:OXW3cFO4j/vkILX9ljCYbg==,type:str]
+    lastmodified: "2025-01-19T19:44:41Z"
+    mac: ENC[AES256_GCM,data:AiDrIWC6PXPGphZy7ABKH5Oo4C4cZa9RZGkqO8UxgIiRhSxPHoHvhDKX+M711k9m10kEeAu0x2aXJWa/0dfhmDrFCYMat4+l/emA4mzOzWU0eLRb5Hu6uZYoTGkujzJMPZAr90759HETAhkk/cB1l3AwyKDkYQ51qUCesaP+7S4=,iv:w1iliftA8bySb+OxVPnZKLxHNLuEkn1tNwB3iHE/r/A=,tag:X/m6ewFRyl85eZM0WqkN5A==,type:str]
     pgp: []
     version: 3.9.2
